# Seam

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  syntax.ebnf
.github/workflows/: build.yml  cmake.yml
compiler/: CMakeLists.txt
compiler/src/: Compiler.cpp  compiler.cpp
core/: CMakeLists.txt
core/include/: exception.h  lexer.h  source.h  source_position.h  symbol.h  symbols.h  tokens.h
core/include/ast/: ast.h  print_visitor.h  visitor.h
core/include/localisation/: en_gb.h  localisation.h
core/include/parser/: lexer.h  parser.h
core/include/type/: type.h
core/src/: core.hpp  lexer.cpp  module.hpp  source.cpp
core/src/ast/: ast.cpp  print_visitor.cpp
core/src/code_generation/: code_generator.cpp  code_generator.hpp
core/src/debug/: graphviz_visitor.cpp  graphviz_visitor.h
core/src/ir/ast/: expression.cpp  expression.hpp  node.hpp  statement.cpp  statement.hpp  visitor.hpp
core/src/lexer/: lexeme.hpp  lexer.cpp  lexer.hpp
core/src/parser/: lexer.cpp  parser.cpp  parser.hpp
core/src/parser/passes/: type_analyzer.cpp  type_analyzer.hpp
core/src/types/: alias_type.cpp  alias_type.hpp  base_type.cpp  base_type.hpp  bool_type.cpp  bool_type.hpp  class_type.cpp  class_type.hpp  number_type.cpp  number_type.hpp  string_type.cpp  string_type.hpp  type.cpp  type.hpp  void_type.cpp  void_type.hpp
core/src/utils/: exception.hpp  position.hpp
example/: CMakeLists.txt
example/src/: Source.cpp
seam/: CMakeLists.txt
seam/include/ast/: ASTNode.h  Declaration.h  Module.h
seam/include/ast/expression/: Expression.h
seam/include/ast/statement/: Statement.h
seam/include/core/: Debug.h  Exception.h  Module.h  ModuleManager.h  SourcePosition.h
seam/include/helper/: Format.h
seam/include/parse/: LexState.h  Lexer.h  Parser.h  Token.h
seam/include/symbol/: FunctionSymbol.h  ScopedSymbolTable.h  Symbol.h
seam/src/ast/: Declaration.cpp  Module.cpp
seam/src/core/: Module.cpp  ModuleManager.cpp
seam/src/parse/: LexState.cpp  Lexer.cpp  Parser.cpp  Token.cpp
seam/src/symbol/: FunctionSymbol.cpp  ScopedSymbolTable.cpp  Symbol.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  lexer_tests.cpp  parser_tests.cpp  source_reader_tests.cpp
